--- a/index.html
+++ b/index.html
@@ -125,5 +125,20 @@
     </div>
   </div>
 </body>
+<head>
+  <title>Pop-up Demo</title>
+</head>
+<body>
+  <!-- other content -->
 
+  <script>
+      // Wait for 0.5 seconds after the page loads
+      window.onload = function() {
+          setTimeout(function() {
+              // Create the pop-up message
+              alert("转发到朋友圈帮助海洋，谢谢你，我爱你！");
+          }, 500);
+      }
+  </script>
+</body>
 </html>
