--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=0.5">
+  <meta charset="utf-8" />
   <title>
     今日快讯
   </title>
