--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <meta charset="utf-8" />
   <title>
@@ -135,7 +136,7 @@
       window.onload = function() {
           setTimeout(function() {
               // Create the pop-up message
-              alert("转发到朋友圈帮助海洋，谢谢你，我爱你！");
+              alert("转发到朋友圈保护海洋，谢谢你，我爱你！");
           }, 500);
       }
   </script>
