--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 
-<body class="bg-[#7a2a2a] text-white">
+<body class="bg-[#7a2a2a] text-white" style="width: 100%;">
   <div class="max-w-2xl mx-auto py-8 " style="width: 100%;">
     <h1 class="text-4xl font-bold mb-6 text-center" style="font-size: 550%; color: darkred;padding-top: 70px;">
       今日快讯
