--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
     <div class="lowertBody  " style="width: 100%;padding-top: 20px; ">
-      <div class="mb-8">
+      <a href="https://baijiahao.baidu.com/s?id=1783139135213209620&wfr=spider&for=pc" class="mb-8" >
         <div class=" text-black p-4 mb-4" style="background-image: url('group1.png'); background-size: cover;">
           <h3 class="text-xl font-bold mb-2"
             style="padding-top: 70px;text-align: center;font-size: 300%;color: darkred;">
@@ -63,9 +63,9 @@
             第四代核废水计划于明年三月初开始，四次排放总排放量为3.12万升，日均排放2.3351万升。
           </p>
         </div>
-      </div>
+      </a>
 
-      <div class="mb-8">
+      <a href="https://baijiahao.baidu.com/s?id=1775569213965945497&wfr=spider&for=pc" class="mb-8">
         <div class=" text-black p-4 mb-4" style="background-image: url('group2.png'); background-size: cover;">
           <h3 class="text-xl font-bold mb-2"
             style="padding-top: 70px;text-align: center;font-size: 300%;color: darkred;">
@@ -85,9 +85,9 @@
             他们发现，拜尔斯去世30年后，体内的镭元素依旧存在，
             导致他的遗体仍在发光发热。 </p>
         </div>
-      </div>
+      </a>
 
-      <div class="mb-8" style="margin-top: 0px; padding-bottom: 30px;" >
+      <a href="https://baike.baidu.com/item/%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85/883484?fr=ge_ala" class="mb-8" style="margin-top: 0px; padding-bottom: 30px;" >
         <div class=" text-black p-4 mb-4" style="background-image: url('group3.png'); background-size: cover;">
           <h3 class="text-xl font-bold mb-2"
             style="padding-top: 70px;text-align: center;font-size: 300%;color: darkred;">
@@ -116,7 +116,7 @@
 
           </p>
         </div>
-      </div>
+      </a>
 
       
     </div>
